--- a/package.json
+++ b/package.json
@@ -1,7 +1,17 @@
 {
   "name": "socket-chat-example",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "my first socket.io app",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [
+    "example",
+    "heroku"
+  ],
+  "author": "hikaro",
+  "license": "MIT"
   "dependencies": {
     "express": "4.10.2",
     "socket.io": "1.2.0"
