--- a/package.json
+++ b/package.json
@@ -1,22 +1,9 @@
 {
-  "name": "socket-chat-example",
-  "version": "1.0.0",
+  "name": "chat-ex",
+  "version": "0.0.1",
   "description": "my first socket.io app",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [
-    "example",
-    "heroku"
-  ],
-  "author": "hikaro",
-  "license": "MIT"
   "dependencies": {
     "express": "4.10.2",
     "socket.io": "1.2.0"
-  },
-  "engines": {
-    "node": "4.1.1"
   }
 }
