--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "chat-ex",
+  "name": "chat-rpg",
   "version": "0.0.1",
-  "description": "my first socket.io app",
+  "description": "chat com rolagem de dados",
   "dependencies": {
     "express": "4.10.2",
     "socket.io": "1.2.0"
